<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="63dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/net_error_title"
            android:textColor="#080808"
            android:textSize="19sp" />

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:src="@mipmap/ic_back_grey" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/img_net_error" />

        <TextView
            android:id="@+id/net_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="23dp"
            android:text="@string/net_error_message_text"
            android:textColor="#C1C1C1"
            android:textSize="15sp" />


        <Button
            android:id="@+id/to_setting_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="23dp"
            android:layout_marginRight="20dp"
            android:background="#0BA6EF"
            android:text="@string/to_setting_btn_text"
            android:textColor="@android:color/white"
            android:textSize="19sp" />
    </LinearLayout>

</RelativeLayout>
