<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/popup_select_file_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBaseline_toBaselineOf="@id/popup_select_photo_task"
        app:layout_constraintBottom_toTopOf="@id/popup_select_cancel"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/popup_select_photo_task"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="13sp"
            android:src="@mipmap/ic_file_task" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/popup_select_file_task_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/popup_select_photo_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/popup_select_cancel"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/popup_select_file_task"
        app:layout_constraintRight_toLeftOf="@id/popup_select_camera_task"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/ic_photo_task" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/popup_select_photo_task_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/popup_select_camera_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBaseline_toBaselineOf="@id/popup_select_photo_task"
        app:layout_constraintBottom_toTopOf="@id/popup_select_cancel"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/popup_select_photo_task"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/ic_camera_task" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/popup_select_camera_task_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/popup_select_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/popup_select_cancel_text"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popup_select_photo_task" />
</androidx.constraintlayout.widget.ConstraintLayout>
